[form-builder] Block editor: fix wrapping of contentBlocks to show markers consistently

--- a/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/ListItem.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor/nodes/styles/ListItem.css
@@ -2,7 +2,6 @@
 
 .root {
   width: auto;
-  composes: xsmallToxSmall from './Spacing.css';
   margin-left: var(--large-padding);
 
   /* Important 'transform' in order to force refresh the ::before and ::after rules
